Auto-detect OS for exporting playlists

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -15,11 +15,14 @@
 .post-nav {
 	text-align: center;
 
-	.clear-button {
-		color: @greyLight;
+	.buttons {
 		position: absolute;
 		top: 0;
 		right: 0;
+
+		.clear-button {
+			color: @greyLight;
+		}
 	}
 
 	.rating-container {
