--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -128,7 +128,8 @@ a:hover { color: @white; background-color: @linkColor; }
 	margin-left: 8px;
 }
 
-.location.btn-group, .navbar .export-button {
+.location.btn-group, .navbar button {
+	float: right;
 	margin-top: 14px;
 	margin-right: 14px;
 }
