Generate server data

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -15,14 +15,8 @@
 .post-nav {
 	text-align: center;
 
-	.buttons {
-		position: absolute;
-		top: 0;
-		right: 0;
-
-		.clear-button {
-			color: @greyLight;
-		}
+	.category-buttons.active {
+		background-color: @greyLight;
 	}
 
 	.rating-container {
