--- a/public/css/data.less
+++ b/public/css/data.less
@@ -19,11 +19,13 @@
 		background-color: @greyLight;
 	}
 
-	.rating-container {
+	.rating-container, .category-container {
 		width: 30%;
 		display: inline-block;
 		padding: @spacingWide;
+	}
 
+	.rating-container {
 		.glyphicon {
 			font-size: 32px;
 			z-index: -1;
@@ -57,6 +59,24 @@
 					}
 					text-anchor: end;
 				}
+			}
+		}
+	}
+
+	.category-container {
+		background-color: #cccccc;
+		svg {
+			margin: @spacingNormal;
+
+			rect {
+				cursor: pointer;
+				.background-with-states(@barColor);
+			}
+	
+			text {
+				fill: @white;
+				font: @fontSizeDefault sans-serif;
+				text-anchor: middle;
 			}
 		}
 	}
