--- a/public/css/data.less
+++ b/public/css/data.less
@@ -64,7 +64,8 @@
 	}
 
 	.category-container {
-		background-color: #cccccc;
+		vertical-align: top;
+
 		svg {
 			margin: @spacingNormal;
 
@@ -74,7 +75,7 @@
 			}
 	
 			text {
-				fill: @white;
+				fill: @black;
 				font: @fontSizeDefault sans-serif;
 				text-anchor: middle;
 			}
