Add events to text as well as rect

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -35,8 +35,11 @@
 		svg {
 			margin: @spacingNormal;
 
-			rect {
+			rect, text {
 				cursor: pointer;
+			}
+
+			rect {
 				.background-with-states(@barColor);
 			}
 	
