--- a/public/css/moody.less
+++ b/public/css/moody.less
@@ -2,6 +2,10 @@
 @import "data.less";
 
 .post-nav {
+	padding-top: @spacingNormal;
+	position: relative;
+	text-align: center;
+
 	.chart-container {
 		display: inline-block;
 		width: 50%;
@@ -9,6 +13,28 @@
 
 		circle {
 			opacity: 0.7;
+		}
+	}
+
+	.axis-label {
+		color: @grey;
+		font-size: @fontSizeLarge;
+		margin: @spacingNarrow;
+		&.mood-high {
+			top: 0;
+		}
+		&.mood-low {
+			bottom: 0;
+		}
+		&.energy-high, &.energy-low {
+			position: absolute;
+			top: calc(~'50% - ' @fontSizeLarge / 2 + @spacingNarrow);
+		}
+		&.energy-high {
+			left: 75%;
+		}
+		&.energy-low {
+			right: 75%;
 		}
 	}
 }
