--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -5,11 +5,13 @@ body {
 	color: @defaultFontColor; 
 }
 
-body, p, ol, ul, td, th {
+* {
   	-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 			  box-sizing: border-box;
+}
 
+body, p, ol, ul, td, th {
   font-family: helvetica, arial, sans-serif;
   font-size: @fontSizeDefault;
   line-height: 15px;
@@ -199,4 +201,14 @@ ul.plain {
 			background-image: url(../images/spinner.gif);
 		}
 	}
+}
+
+#tooltip {
+	position: absolute;
+	padding: @spacingNarrow;
+	background-color: @greyDark;
+	color: @white;
+	opacity: 0.8;
+	border-radius: @borderRadius;
+	white-space: pre;
 }
