--- a/public/css/data.less
+++ b/public/css/data.less
@@ -33,4 +33,12 @@ svg {
 		stroke-width: 2;
 		stroke: @grey;
 	}
+	.axis {
+		path, line {
+			display: none;
+		}
+		text {
+			fill: @grey;
+		}
+	}
 }
