--- a/public/css/matrix.less
+++ b/public/css/matrix.less
@@ -2,39 +2,41 @@
 @import "data.less";
 
 .post-nav {
-	padding-top: @spacingNormal;
-	position: relative;
-	text-align: center;
-
-	.chart-container {
-		display: inline-block;
-		width: 50%;
-		margin: 0 25%;
-
-		circle {
-			opacity: 0.7;
+	.post-nav-positioning {
+		position: relative;
+		padding-top: @spacingNormal;
+		text-align: center;
+	
+		.chart-container {
+			display: inline-block;
+			width: 50%;
+			margin: 0 25%;
+	
+			circle {
+				opacity: 0.7;
+			}
 		}
-	}
-
-	.axis-label {
-		color: @grey;
-		font-size: @fontSizeLarge;
-		margin: @spacingNarrow;
-		&.mood-high {
-			top: 0;
-		}
-		&.mood-low {
-			bottom: 0;
-		}
-		&.energy-high, &.energy-low {
-			position: absolute;
-			top: calc(~'50% - ' @fontSizeLarge / 2 + @spacingNarrow);
-		}
-		&.energy-high {
-			left: 75%;
-		}
-		&.energy-low {
-			right: 75%;
+	
+		.axis-label {
+			color: @grey;
+			font-size: @fontSizeLarge;
+			margin: @spacingNarrow;
+			&.mood-high {
+				top: 0;
+			}
+			&.mood-low {
+				bottom: 0;
+			}
+			&.energy-high, &.energy-low {
+				position: absolute;
+				top: calc(~'50% - ' @fontSizeLarge / 2 + @spacingNarrow);
+			}
+			&.energy-high {
+				left: 75%;
+			}
+			&.energy-low {
+				right: 75%;
+			}
 		}
 	}
 }
