Add tooltip to rating charts

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -214,7 +214,7 @@ ul.plain {
 		font-weight: bold;
 	}
 	ul {
-		margin: 0 0 0 @spacingNormal;
+		margin: @spacingNormal 0 0 0;
 		padding: 0;
 		li {
 			list-style-type: none;
