--- a/public/css/facet.less
+++ b/public/css/facet.less
@@ -57,11 +57,11 @@
 		svg {
 			margin: @spacingNormal;
 
-			rect:nth-child(1) { .background-with-states(#82a6b0) }
-			rect:nth-child(2) { .background-with-states(#559aaf) }
-			rect:nth-child(3) { .background-with-states(#31b0d5) }
-			rect:nth-child(4) { .background-with-states(#18bbec) }
-			rect:nth-child(5) { .background-with-states(#08c3fd) }
+			.rating-1 { .background-with-states(#82a6b0) }
+			.rating-2 { .background-with-states(#559aaf) }
+			.rating-3 { .background-with-states(#31b0d5) }
+			.rating-4 { .background-with-states(#18bbec) }
+			.rating-5 { .background-with-states(#08c3fd) }
 
 			text {
 				fill: @black;
