Add spinners for ajax requests

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -174,21 +174,22 @@ ul.plain {
 	display: none;
 }
 
-#loading {
-	position: fixed;
+.loading {
+	position: absolute;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
-	opacity: 0.8;
+	opacity: 0.5;
 	background-color: @black;
 	z-index: 1000;
+	border-radius: @borderRadius;
 	> div {
 		@size: 32px;
 		@padding: 8px;
-		position: fixed;
-		top: calc(~'50% - ' @size / 2 - @padding);
-		left: calc(~'50% - ' @size / 2 - @padding);
+		position: absolute;
+		top: calc(~'50% - ' @size / 2 + @padding);
+		left: calc(~'50% - ' @size / 2 + @padding);
 		background-color: @white;
 		opacity: 1;
 		padding: @padding;
@@ -200,6 +201,14 @@ ul.plain {
 			height: @size;
 			background-image: url(../images/spinner.gif);
 		}
+	}
+}
+
+body > .loading {
+	position: fixed;
+	border-radius: 0;
+	> div {
+		position: fixed;
 	}
 }
 
