Add song list to tags page modal (still needs styling)

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -123,13 +123,13 @@ a:hover { color: @white; background-color: @linkColor; }
 }
 
 .tag, #song-count-span {
-	border-radius: @borderRadius;
+	border-radius: @fontSizeDefault;
 	font-weight: bold;
 	margin-right: @spacingNormal;
 	margin-bottom: @spacingNormal;
-	display: inline;
-	line-height: 3;
-	padding: 3px 8px;
+	display: inline-block;
+	line-height: 1;
+	padding: @spacingNarrow @spacingNormal;
 	background-color: #deedf7;
 	border: 1px solid #aed0ea;
 	white-space: nowrap;
