--- a/public/css/tags.less
+++ b/public/css/tags.less
@@ -1,3 +1,11 @@
-.tag-container, .modal-body {
+.songs, .tags {
+	padding: 0;
+	margin: 0;
+	li {
+		list-style-type: none;
+	}
+}
+
+.tags {
 	text-align: center;
 }
