songs markup in tags modal

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -124,14 +124,13 @@ a:hover { color: @white; background-color: @linkColor; }
 
 .tag, #song-count-span {
 	border-radius: @fontSizeDefault;
-	font-weight: bold;
 	margin-right: @spacingNormal;
 	margin-bottom: @spacingNormal;
 	display: inline-block;
 	line-height: 1;
 	padding: @spacingNarrow @spacingNormal;
-	background-color: #deedf7;
-	border: 1px solid #aed0ea;
+	background-color: @blue;
+	border: 1px solid @greyBlue;
 	white-space: nowrap;
 }
 
