--- a/public/css/facet.less
+++ b/public/css/facet.less
@@ -9,7 +9,7 @@
 		background-color: @greyLight;
 	}
 
-	.distribution-container {
+	.facet-container {
 		width: 50%;
 		margin: 0 25%;
 
@@ -29,22 +29,22 @@
 			text {
 				font: @fontSizeDefault sans-serif;
 			}
+		}
 
-			&.distribution text {
-				text-anchor: middle;
+		.histogram-container svg text {
+			text-anchor: middle;
+		}
+
+		.binary-container svg {
+			g:first-child text {
+				text-anchor: start;
 			}
-
-			&.unrated {
-				g:first-child text {
-					text-anchor: start;
+			g:not(:first-child) {
+				rect {
+					.background-with-states(@greyLight);
 				}
-				g:not(:first-child) {
-					rect {
-						.background-with-states(@greyLight);
-					}
-					text {
-						text-anchor: end;
-					}
+				text {
+					text-anchor: end;
 				}
 			}
 		}
