fix tags on collections.pl

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -84,6 +84,7 @@
 				max-width: @albumSize - 2 * @spacingNarrow;
 				overflow-x: hidden;
 				text-overflow: ellipsis;
+				white-space: nowrap;
 				&:not(:last-child) {
 					margin-bottom: 1px;
 				}
