--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -1,7 +1,11 @@
 @import "imports.less";
 
+.post-nav {
+    top: 150px;
+    margin: 0 @spacingWide @spacingWide @spacingWide;
+}
+
 .collections {
-	margin-left: 250px;
 	.collection {
 		@albumSize: 75px;
 	
@@ -90,39 +94,6 @@
 				}
 				//line-height: 15px;
 			}
-		}
-	}
-}
-
-.controls {
-	@width: 225px;
-
-	margin: @spacingNormal;
-	position: fixed;
-	width: @width;
-	top: @navHeight + @spacingNormal;
-	bottom: 0;
-	overflow-x: visible;
-	overflow-y: scroll;
-
-	label {
-		display: block;
-	}
-
-	input[type="text"], button {
-		width: @width;
-		margin-bottom: 10px;
-	}
-
-	input[type="checkbox"] {
-		margin: 0 @spacingNarrow @spacingNarrow 0;
-	}
-
-	.sort-menu {
-		.dropdown-toggle, .dropdown-toggle:hover {
-			background-color: @white;
-			text-decoration: none;
-			color: @greyDarkest;
 		}
 	}
 }
