--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -50,7 +50,10 @@
 	text-align: center;
 
 	#column-hints {
+        @width: 300px;
 		line-height: 1.5;
+        width: @width;
+        margin-left: calc(~'50% - ' @width / 2);
 	}
 
 	.playlists {
