--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -7,7 +7,8 @@
 
 .collections {
 	.collection {
-		@albumSize: 100px;
+		@albumSize: 200px;
+        position: relative;
 	
 		float: left;
 		margin: 0 0 @spacingWide @spacingWide;
@@ -15,19 +16,34 @@
 		cursor: pointer;
 		overflow: hidden;
 		background-color: @white;
+        max-width: @albumSize;
+
+		.name, .artist {
+			.ellipsis();
+            text-align: center;
+		}
+
+        .name {
+            margin-top: @spacingNarrow;
+        }
 	
-			border: 1px solid @greyLight;
-			width: 275px;
-			padding: @spacingNormal @spacingNormal 0 @spacingNormal;
-	
+		.details, .details-background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: @albumSize;
+            height: @albumSize;
+        }
+
+        .details-background {
+            background-color: @white;
+            opacity: 0.9;
+        }
+
 		.details {
-			color: @grey;
-			.name, .artist {
-				.ellipsis();
-			}
-			.name {
-				color: @defaultFontColor;
-			}
+            padding: @spacingNarrow;
+            opacity: 1;
+
 			.rating .blank {
 				display: none;
 			}
@@ -39,12 +55,10 @@
 				}
 			}
 		}
-	
-		&:not(:hover) {
-			.export-icons {
-				display: none;
-			}
-		}
+
+		&:not(:hover) .details, &:not(:hover) .details-background {
+		    display: none;
+        }
 	
 		&.selected {
 			opacity: 0.3;
@@ -52,9 +66,6 @@
 	
 		.mix, .album {
 			border: 1px solid @grey;
-			float: left;
-			margin-right: @spacingNormal;
-			margin-bottom: @spacingNormal;
 		}
 	
 		.album {
