Add completion percentage to collections advanced search

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -48,14 +48,11 @@
 
 			.rating {
                 width: 60px;
-                .blank {
-                    visibility: hidden;
-                }
 			}
 
-            .tags {
+            .ratings, .tags {
                 text-align: center;
-                margin-top: 5px;
+                line-height: 1.5;
             }
 
 			.export-icons {
