Add X icon to clear simple filter

--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -26,6 +26,10 @@
             right: 5px;
             top: 15px;
         }
+
+        .glyphicon-remove {
+            cursor: pointer;
+        }
 	}
 
 	#complex-filter-trigger {
