Straighten out color updating

--- a/public/css/colors.less
+++ b/public/css/colors.less
@@ -1,15 +1,5 @@
 @import "imports.less";
 
-@minicolorsDimension: 22px;
-
-.minicolors-panel {
-	top: @minicolorsDimension;
-}
-
-.minicolors input {
-	height: @minicolorsDimension;
-}
-
 .btn-group > .btn.active {
 	z-index: 1;
 }
@@ -19,12 +9,7 @@
 	width: 325px;
 	padding: @spacingNormal;
 
-	.name {
-		width: 75px;
-		float: left;
-	}
-
-	.btn-group {
-		margin-left: @spacingNormal;
-	}
+    input, .btn-group {
+        margin-top: @spacingNormal;
+    }
 }
