--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -114,7 +114,7 @@ pre {
 
 a { color: @linkColor; }
 a:visited { color: @linkColor; }
-a:hover { color: @white; background-color: @linkColor; }
+a:hover:not(.img-link) { color: @white; background-color: @linkColor; }
 
 .horizontal li {
 	display: inline;
