On disambiguation, highlight any recognized collections

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -161,7 +161,7 @@ ul.plain {
 	}
 }
 
-.update-in-progress {
+.update-in-progress, .highlight {
 	background-color: @updateInProgressColor !important;
 }
 
