--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -139,10 +139,13 @@ a:hover:not(.img-link) { color: @white; background-color: @linkColor; }
 	margin-left: 8px;
 }
 
-.location.btn-group, .navbar button {
+.navbar .controls {
 	float: right;
-	margin-top: 14px;
-	margin-right: 14px;
+	padding-top: 14px;
+
+    button {
+	    margin-right: 14px;
+    }
 }
 
 .page {
