--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -27,7 +27,7 @@
             top: 15px;
         }
 
-        .glyphicon-remove {
+        .glyphicon:not(.glyphicon-search) {
             cursor: pointer;
         }
 	}
