--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -97,11 +97,14 @@ td, th {
 	vertical-align: top;
 }
 
-input[type="text"] {
-	height: @inputHeight;
+input[type="text"], textarea {
 	border: 1px solid #ccc;
 	border-radius: @borderRadius;
 	padding: 5px;
+}
+
+input[type="text"] {
+	height: @inputHeight;
 }
 
 th {
