--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -64,6 +64,7 @@
 			opacity: 0.3;
 		}
 	
+        // TODO: rename classes
 		.mix, .album {
 			border: 1px solid @grey;
 		}
@@ -85,6 +86,10 @@
 				}
 			}
 		}
+
+        &.accepting-drop {
+            background-color: lime;
+        }
 	}
 }
 
@@ -145,4 +150,8 @@
 			}
 		}
 	}
+}
+
+#album-cover-upload {
+    //display: none;
 }
