some class renames

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -64,19 +64,13 @@
 			opacity: 0.3;
 		}
 	
-        // TODO: rename classes
-		.mix, .album {
+		.cover-art, .cover-art-missing {
 			border: 1px solid @grey;
-		}
-	
-		.album {
 			width: @albumSize;
 			height: @albumSize;
 		}
 	
-		.mix {
-			width: @albumSize;
-			height: @albumSize;
+		.cover-art-missing {
 			padding: @spacingNarrow;
 			div {
 				max-width: @albumSize - 2 * @spacingNarrow;
