--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -120,6 +120,8 @@
 
         .accepting-drop {
             position: absolute;
+            top: 0;
+            left: 0
             opacity: 0.9;
             background-color: @white;
             text-align: center;
