Display thumbnails in modal

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -134,6 +134,20 @@
 	}
 }
 
+#track-list {
+    .cover-art-thumbnails {
+        img {
+            @size: 75px;
+
+            width: @size;
+            height: @size;
+            float: left;
+            margin-right: @spacingNarrow;
+            border: 1px solid @grey;
+        }
+    }
+}
+
 #new-collection {
 	.modal-header {
 		input[type='text'] {
