--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -38,7 +38,7 @@
 
         .details-background {
             background-color: @white;
-            opacity: 0.95;
+            opacity: 0.9;
         }
 
 		.details {
@@ -136,14 +136,45 @@
 
 #track-list {
     .cover-art-thumbnails {
-        img {
-            @size: 75px;
+        padding: 0;
+        margin: 0;
 
-            width: @size;
-            height: @size;
+        li {
+            @size: 75px;
+    
+            display: inline-block;
+            list-style-type: none;
+    
+            position: relative;
             float: left;
             margin-right: @spacingNarrow;
             border: 1px solid @grey;
+            cursor: pointer;
+            width: @size;
+            height: @size;
+    
+            img, .trash {
+                width: @size - 2;
+                height: @size - 2;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+    
+            .trash {
+                display: none;
+            }
+    
+            &:hover {
+                .trash {
+                    display: block;
+                    background-color: white;
+                    opacity: 0.9;
+                    text-align: center;
+                    font-size: @size - @spacingWide * 2;
+                    padding: @spacingWide;
+                }
+            }
         }
     }
 }
