--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -143,7 +143,7 @@
     
             .cover-art-thumbnails {
                 padding: 0;
-                margin: 0;
+                margin: @spacingWide 0 0 0;
         
                 li {
                     @size: 75px;
