make songs available on acquisitions page

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -46,3 +46,13 @@ svg {
 		}
 	}
 }
+
+#song-list {
+    .modal-dialog {
+        min-width: 80%;
+
+        .modal-body {
+            min-width: 100px;
+        }
+    }
+}
