--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -1,9 +1,10 @@
-@import "imports.less";
+@import "base.less";
 
 #sql-error {
 	font-family: monospace;
 }
 
+@filterContainerHeight: 65px;
 #filter-container {
 	text-align: center;
 	position: absolute;
