--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -1,257 +1,9 @@
-@import "imports.less";
-
-body { 
-	background-color: @white;
-	color: @defaultFontColor; 
-}
-
-* {
-  	-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-			  box-sizing: border-box;
-}
-
-body, p, ol, ul, td, th {
-  font-family: helvetica, arial, sans-serif;
-  font-size: @fontSizeDefault;
-  line-height: 15px;
-}
-
-label {
-	.clickable();
-}
-
-.clear {
-	clear: both;
-}
-
-.subtle {
-	color: @grey;
-}
-
-.navbar-container {
-	position: fixed;
-	padding: @spacingWide @spacingWide 0 @spacingWide;
-	width: 100%;
-	z-index: 4;
-
-	.navbar {
-		margin: 0;
-		.dropdown-toggle {
-			cursor: pointer;
-		}
-		.dropdown-menu .glyphicon {
-			color: @grey;
-			margin-right: @spacingNarrow;
-		}
-		li.active > a > .glyphicon {
-			color: @white;
-		}
-	}
-
-    .controls {
-        @spacing: 14px;
-
-	    float: right;
-	    padding-top: @spacing;
-
-        .export-dropdown {
-            .dropdown-menu {
-                left: auto;
-                right: @spacing;
-            }
-        }
-
-        button {
-	        margin-right: @spacing;
-        }
-    }
-}
-
-.post-nav {
-	position: fixed;
-	top: @navHeight;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	overflow-y: auto;
-	margin: @spacingWide;
-}
-
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
-
-th {
-	text-align: left;
-	padding: 0 2px;
-	background: @white;
-	border: none;
-	border-bottom: 1px solid @black;
-}
-
-td, th {
-  margin: 1px;
-  padding: 2px 5px;
-	vertical-align: top;
-}
-
-input[type="text"], textarea {
-	border: 1px solid #ccc;
-	border-radius: @borderRadius;
-	padding: 5px;
-}
-
-input[type="text"] {
-	height: @inputHeight;
-}
-
-th {
-  text-align: left;
-  padding-right: 10px;
-  font-weight: bold;
-}
-
-.rating {
-	font-family: courier;
-	font-size: @fontSizeLarge;
-	white-space: nowrap;
-	vertical-align: middle;
-
-    &:not(td) {
-	    display: inline-block;
-    }
-
-	.glyphicon {
-		color: @grey;
-		font-size: @fontSizeDefault;
-		&.blank {
-			color: @greyLightest;
-		}
-	}
-}
-
-pre {
-  background-color: @greyLightest;
-  padding: @spacingNormal;
-}
-
-a { color: @linkColor; }
-a:visited { color: @linkColor; }
-a:hover:not(.img-link) { color: @white; background-color: @linkColor; }
-
-.horizontal li {
-	display: inline;
-	list-style-type: none;
-	padding-right: @spacingWide;
-}
-
-.tag, #song-count-span {
-	border-radius: @fontSizeDefault;
-	margin-right: @spacingNormal;
-	margin-bottom: @spacingNormal;
-	display: inline-block;
-	line-height: 1;
-	padding: @spacingNarrow @spacingNormal;
-	background-color: @blue;
-	border: 1px solid @greyBlue;
-	white-space: nowrap;
-}
-
-.tag-count {
-	font-size: 10px;
-	margin-left: 8px;
-}
-
-.page {
-	padding-top: 20px;
-	display: none;
-}
-
-ul.plain {
-	margin: 0;
-	padding: 0;
-
-	li {
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-	}
-}
-
-.update-in-progress, .highlight {
-    &.glyphicon {
-	    color: @updateInProgressColor !important;
-    }
-
-    &:not(.glyphicon) {
-	    background-color: @updateInProgressColor !important;
-    }
-}
-
-.modal-dialog .close {
-	margin: 15px;
-}
-
-#initial-page-data {
-	display: none;
-}
-
-.loading {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	opacity: 0.5;
-	background-color: @black;
-	z-index: 1000;
-	border-radius: @borderRadius;
-	> div {
-		@size: 32px;
-		@padding: 8px;
-		position: absolute;
-		top: calc(~'50% - ' @size / 2 + @padding);
-		left: calc(~'50% - ' @size / 2 + @padding);
-		background-color: @white;
-		opacity: 1;
-		padding: @padding;
-		width: @size + @padding * 2;
-		height: @size + @padding * 2;
-		border-radius: @borderRadius;
-		> div {
-			width: @size;
-			height: @size;
-			background-image: url(../images/spinner.gif);
-		}
-	}
-}
-
-body > .loading {
-	position: fixed;
-	border-radius: 0;
-	> div {
-		position: fixed;
-	}
-}
-
-#tooltip {
-	position: absolute;
-	padding: @spacingNarrow;
-	background-color: @greyDark;
-	color: @white;
-	opacity: 0.8;
-	border-radius: @borderRadius;
-	> div {
-		font-weight: bold;
-	}
-	ul {
-		margin: @spacingNormal 0 0 0;
-		padding: 0;
-		li {
-			list-style-type: none;
-		}
-	}
-}
-
+@import "base.less";
+@import "collections.less";
+@import "data.less";
+@import "defaults.less";
+@import "facet.less";
+@import "filters.less";
+@import "matrix.less";
+@import "songs.less";
+@import "structure.less";
