some D3 v4 compatibility changes

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -17,7 +17,7 @@ svg {
 		cursor: pointer;
 	}
 	rect, circle {
-		//.background-with-states(@barColor);
+		.background-with-states(@barColor);
 	}
 	path {
 		stroke-width: 2px;
