hook up client-side filtering

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -5,5 +5,6 @@
 @import "facet.less";
 @import "filters.less";
 @import "matrix.less";
+@import "network.less";
 @import "songs.less";
 @import "structure.less";
