--- a/public/css/base.less
+++ b/public/css/base.less
@@ -29,6 +29,11 @@
     }
 }
 
+.label {
+    font-size: 100%;
+    font-weight: normal;
+}
+
 .rating {
 	font-family: courier;
 	font-size: @fontSizeLarge;
