--- a/public/css/network.less
+++ b/public/css/network.less
@@ -4,6 +4,16 @@
 .network-filters {
     min-width: 200px;
 
+    > div {
+        &:last-child {
+            margin-top: @spacingWide;
+        }
+
+        &:not(:last-child) {
+            margin-bottom: @spacingNormal;
+        }
+    }
+
     .input-group {
         @width: 100px;
     
