--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -32,56 +32,62 @@
 }
 
 .song-table {
-    td {
-        border: none;
-        vertical-align: middle;
-
-        &:not(:first-child) {
-            border-bottom: 1px solid @greyLightest;
+    tr {
+        &:hover {
+            background-color: @greyLightest;
         }
-
-        &:last-child {
-            width: 35%;
-        }
-
-        &[contenteditable="true"] {
-            cursor: pointer;
-        }
-
-        &.icon-cell {
-            width: @fontSizeDefault + @spacingNarrow * 2;
-            color: @greyLight;
-            background-color: @backgroundColor;
+    
+        td {
             border: none;
-
-            .glyphicon {
+            vertical-align: middle;
+    
+            &:not(:first-child) {
+                border-bottom: 1px solid @greyLightest;
+            }
+    
+            &:last-child {
+                width: 35%;
+            }
+    
+            &[contenteditable="true"] {
                 cursor: pointer;
             }
-        }
-
-        &.is-starred {
-            text-align: right;
-
-            .glyphicon {
-                &.glyphicon-star {
-                    color: @grey;
-                }
-
-                &.update-in-progress {
-                    background-color: @white;
-                    color: @updateInProgressColor;
+    
+            &.icon-cell {
+                width: @fontSizeDefault + @spacingNarrow * 2;
+                color: @greyLight;
+                background-color: @backgroundColor;
+                border: none;
+    
+                .glyphicon {
+                    cursor: pointer;
                 }
             }
-        }
-
-        &.has-lyrics .glyphicon {
-            color: @grey;
-        }
-
-        &.rating {
-            width: @fontSizeDefault * 5 + @spacingNarrow * 2;
-            .glyphicon {
-                margin-left: -1px;    // cram icons together horizontally
+    
+            &.is-starred {
+                text-align: right;
+    
+                .glyphicon {
+                    &.glyphicon-star {
+                        color: @grey;
+                    }
+    
+                    &.update-in-progress {
+                        background-color: @white;
+                        color: @updateInProgressColor;
+                    }
+                }
+            }
+    
+            &.has-lyrics .glyphicon {
+                color: @grey;
+            }
+    
+            &.rating {
+                width: @fontSizeDefault * 5 + @spacingNarrow * 2;
+                .glyphicon {
+                    margin-left: -1px;    // cram icons together horizontally
+                }
             }
         }
     }
