--- a/public/css/base.less
+++ b/public/css/base.less
@@ -53,7 +53,7 @@
 	}
 }
 
-.tag, #song-count-span {
+.tag, #item-count-span {
 	border-radius: @fontSizeDefault;
 	margin-right: @spacingNormal;
 	margin-bottom: @spacingNormal;
@@ -63,6 +63,20 @@
 	background-color: @blue;
 	border: 1px solid @greyBlue;
 	white-space: nowrap;
+}
+
+#item-count-container {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+
+	#item-count-span {
+		border-radius: @borderRadius;
+		position: relative;
+		z-index: 3;
+	}
 }
 
 .tag {
