--- a/public/css/matrix.less
+++ b/public/css/matrix.less
@@ -1,6 +1,12 @@
 @import "base.less";
 @import "data.less";
 
+.matrix-filters {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .matrix-container {
 	position: relative;
 	padding-top: @spacingNormal;
