Add advanced filter to timeline

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -2,7 +2,7 @@
 
 #song-table-container {
 	position: fixed;
-	top: 150px;
+	top: @navHeight + @filterContainerHeight;
 	left: @spacingWide;
 	right: @spacingWide;
 	bottom: 40px;
