--- a/public/css/structure.less
+++ b/public/css/structure.less
@@ -49,7 +49,7 @@ body > .loading {
 
 .post-nav {
 	position: fixed;
-	top: @navHeight;
+	top: @navHeight + @filterContainerHeight;
 	bottom: 0;
 	left: 0;
 	right: 0;
