--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -136,47 +136,51 @@
     .modal-dialog {
         min-width: 80%;
 
-        .modal-body {
-            min-height: 100px;  // enough space for spinner
-    
-            .cover-art-thumbnails {
-                padding: 0;
-                margin: @spacingWide 0 0 0;
+        .modal-content {
+            opacity: 0.85;
+
+            .modal-body {
+                min-height: 100px;  // enough space for spinner
         
-                li {
-                    @size: 75px;
+                .cover-art-thumbnails {
+                    padding: 0;
+                    margin: @spacingWide 0 0 0;
             
-                    display: inline-block;
-                    list-style-type: none;
-            
-                    position: relative;
-                    float: left;
-                    margin-right: @spacingNarrow;
-                    border: 1px solid @grey;
-                    cursor: pointer;
-                    width: @size;
-                    height: @size;
-            
-                    img, .trash {
-                        width: @size - 2;
-                        height: @size - 2;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-            
-                    .trash {
-                        display: none;
-                    }
-            
-                    &:hover {
+                    li {
+                        @size: 75px;
+                
+                        display: inline-block;
+                        list-style-type: none;
+                
+                        position: relative;
+                        float: left;
+                        margin-right: @spacingNarrow;
+                        border: 1px solid @grey;
+                        cursor: pointer;
+                        width: @size;
+                        height: @size;
+                
+                        img, .trash {
+                            width: @size - 2;
+                            height: @size - 2;
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                        }
+                
                         .trash {
-                            display: block;
-                            background-color: white;
-                            opacity: 0.9;
-                            text-align: center;
-                            font-size: @size - @spacingWide * 2;
-                            padding: @spacingWide;
+                            display: none;
+                        }
+                
+                        &:hover {
+                            .trash {
+                                display: block;
+                                background-color: white;
+                                opacity: 0.9;
+                                text-align: center;
+                                font-size: @size - @spacingWide * 2;
+                                padding: @spacingWide;
+                            }
                         }
                     }
                 }
