Resize collections based on how many songs match filter

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -18,6 +18,11 @@
         background-color: @white;
         max-width: @albumSize;
 
+        &:hover .cover-art {
+            width: @albumSize !important;
+            height: @albumSize !important;
+        }
+
         .name, .artist {
             .ellipsis();
         }
