--- a/public/css/base.less
+++ b/public/css/base.less
@@ -65,7 +65,7 @@
     white-space: nowrap;
 }
 
-#item-count-container {
+#item-count-container, #item-pagination {
     position: fixed;
     bottom: 0;
     width: 100%;
