--- a/public/css/base.less
+++ b/public/css/base.less
@@ -91,7 +91,12 @@
     }
 }
 
-.tag, #item-count-span {
+.tag, .item-count {
+    background-color: @blue;
+    border: 1px solid @greyBlue !important;
+}
+
+.tag {
     border-radius: @fontSizeDefault * 2;
     min-width: @fontSizeDefault * 3;
     margin-right: @spacingWide;
@@ -99,23 +104,15 @@
     display: inline-block;
     line-height: 2;
     padding: @spacingNarrow @spacingNormal;
-    background-color: @blue;
-    border: 1px solid @greyBlue;
     white-space: nowrap;
 }
 
-#item-count-container, #item-pagination {
+#item-pagination {
     position: fixed;
     bottom: 0;
     width: 100%;
     text-align: center;
     font-weight: bold;
-
-    #item-count-span {
-        border-radius: @borderRadius;
-        position: relative;
-        z-index: 3;
-    }
 }
 
 .tag {
