Give tags column min-width

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -75,6 +75,10 @@
                     margin-left: -1px;    // cram icons together horizontally
                 }
             }
+
+            &.tags {
+                min-width: 20%;
+            }
         }
     }
 }
